# knots

./: CMakeLists.txt
kb/is_instance_of/: CMakeLists.txt  is_instance_of.cpp  is_instance_of.h
kb/the_universe/: CMakeLists.txt  the_universe.cpp  the_universe.h
kb/universe/: CMakeLists.txt  universe.cpp  universe.h
kno/: CMakeLists.txt  find_object.cpp  find_object.h  plugin.cpp  plugin.h
kno/evaluate/: CMakeLists.txt  main.cpp  options.cpp  options.h
kno/new/: CMakeLists.txt  main.cpp  options.cpp  options.h
kno/new/templates/: new_object.cpp  new_object.h
kno/object/: kno_object.h
